# MiProyectoPython

./: Main.py  Notebook.ipynb  ReadMe.md  kaggle.json  pyproject.toml
Exercises/: Exercises (1).ipynb  spaceshiptitanic-tutorial-beginner-80-accuracy.ipynb  submission.csv  the-alien-invasion.ipynb  the-elixir-wine.ipynb  the-fantasy-zookeeper.ipynb  the-great-iris-festival.ipynb
